--- a/manualtests/widgets/panel/index.html
+++ b/manualtests/widgets/panel/index.html
@@ -2,73 +2,95 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-	<title>Panel Examples</title>
-	
-	<style type="text/css" media="screen">
-		#helloOverlay { background: #ccc; padding: 20px; }
-	</style>
-	
-	<!-- assumes gloader project folder is next to glow project folder -->
-	<script type="text/javascript" src="../../../../gloader/src/gloader.js">
-		gloader.use(
-			"glow",
-			{
-				$map:  "../../../srcloader/map.js",
-				$base: "../../../src/"
-			}
+	<title>glow.widgets.Panel</title>
+	<script type="text/javascript" src="../../includes/manualtests.js"></script>
+	<!-- loading gloader, to change the location of gloader, edit manualtests.js -->
+	<script type="text/javascript">// <![CDATA[
+		document.write(
+			'<script type="text/javascript" src="' + manualTests.config.gloaderPath + '"> \
+				gloader.use("glow", { \
+					$map:  manualTests.config.mapPath, \
+					$base: manualTests.config.basePath \
+				}); \
+			<' + '/script>'
 		);
-	</script>
+	// ]]></script>
 	
-	<script type="text/javascript">
-		gloader.load(
-			['glow', '@VERSION@', 'glow.widgets.Panel']
-		);
-	</script>
+	<script type="text/javascript">gloader.load(['glow', '@VERSION@', 'glow.widgets.Panel', 'glow.embed'])</script>
+	
 </head>
 
 <body>
-	<h1>glow.widgets.Panel examples</h1>
+	<h1>glow.widgets.Panel</h1>
 	
-	<div class="example">	
-		<h2>Basic Panel</h2>
-		<p>no description</p>
-		
-		<script type="text/javascript" class="showSrc">
-		// <![CDATA[
-		glow.ready(function() {
-			var myPanel = new glow.widgets.Panel("#helloPanel");
-			
-			glow.events.addListener(
-				glow.dom.get("#panel-appear"),
-				"click",
-				function() {
-					myPanel.show();
-				}
-			);
-		});
-		// ]]>
-		</script>
-		
-		<div class="sandbox">
-			<p>
-			Lorem ipsum clee chea saeff a. Enfreep gleepi whop heeth zogh, kucka thee shoogh ne gead ca. Hegh en, vee, fu dreati whim breest taeth ste faeck blea blea dro, plan, rae ha su koo, jooff wreap ho I gla trag ir slae ripi enmaev logher moo pog queeth I slaeing whooth bean draem, ir paers. Gu perki, ghee plae kae. Za beeing hews, bae posting ri blorling ceack wrirl, unjaeh musher fri. A, sla frashe hi; Rae bla ro I whad. Stushe I dust whea droo lae, I infrap truroer bloos troshen pi, troo cae tis, lurth gleth, precuth sea so, wu queaing see quu wha cli pla jockal cresh se la. Doopi, ches shoorl grae vaell hi jeah, op gle prega cloo, quath ke inlockall dreaw. Rea wreela, de, op, droo frae vi, furd stae du drist purth ne draing pij quoo.
-			</p>
-			
-			<p>
-			Make the <a href="#" id="panel-appear" onclick="return false;">panel appear</a>.
-			</p>
-			
-			<p>
-			Tord hea op, wra en, zash treeb; The perbrala cheath quee taed quaen, ghor sod; Blea bu a preree, glurl unseashew neeti chee fri bree la, bagh! Gi, concroshegher cuh unsheerd bloing, stohus, ju zem. Ruv faert, ungrupi, tesum. En degleed po ir stea. Conplerth a brogs, do.
-			</p>
-			
-			<div id="helloPanel">
-				<h2 class="hd">Greetings!</h2>
-				<p>Hello world.</p>
-			</div>
-		</div>
+	<p>More tests are included in Panel's base class, <a href="../overlay">Overlay</a></p>
+	
+	<h2>Basic Panel</h2>
+	
+	<ul>
+		<li>
+			<a href="#" id="panel1Show">Show panel</a>
+		</li>
+		<li>
+			Clicking on the close button should close the panel
+		</li>
+		<li>
+			Clicking on the mask should close the panel
+		</li>
+		<li>
+			Pressing esc should close the panel
+		</li>
+		<li>
+			Header text should be red, body text should be green, footer text should be blue
+		</li>
+		<li>
+			The panel should be given focus when it appears, pressing tab once the panel
+			is open should focus its close button
+		</li>
+		<li>
+			Once closed, focus should return to the "Show panel" link above
+		</li>
+	</ul>
+	
+	<div id="panel1">
+		<h3 class="hd">This is my panel's header</h3>
+		<p>This is my panel's content</p>
+		<p class="ft">This is my panel's footer</p>
 	</div>
 	
-	<script type="text/javascript" src="../../includes/js/showsrc.js"></script>
+	<script type="text/javascript" class="showSrc">
+		glow.ready(function() {
+			window.panel1 = new glow.widgets.Panel('#panel1', {
+				returnTo: '#panel1Show',
+				closeOnEsc: true
+			});
+			
+			panel1.header.css("color", "red");
+			panel1.body.css("color", "green");
+			panel1.footer.css("color", "blue");
+			
+			glow.events.addListener('#panel1Show', 'click', function() {
+				panel1.show();
+				return false;
+			});
+			
+			// log events
+			glow.events.addListener(panel1, 'show', function() {
+				manualTests.log('panel1: show');
+			});
+			glow.events.addListener(panel1, 'hide', function() {
+				manualTests.log('panel1: hide');
+			});
+			glow.events.addListener(panel1, 'afterShow', function() {
+				manualTests.log('panel1: afterShow');
+			});
+			glow.events.addListener(panel1, 'afterHide', function() {
+				manualTests.log('panel1: afterHide');
+			});
+		});
+	</script>
+	
+	<script type="text/javascript">manualTests.showSrc();</script>
+	<script type="text/javascript">manualTests.log('Logging enabled');</script>
 </body>
 </html>
