--- a/manualtests/widgets/sortable/index.html
+++ b/manualtests/widgets/sortable/index.html
@@ -2,65 +2,204 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-	<title>Sortable Examples</title>
+	<title>glow.widgets.Sortable</title>
+	<script type="text/javascript" src="../../includes/manualtests.js"></script>
+	<!-- loading gloader, to change the location of gloader, edit manualtests.js -->
+	<script type="text/javascript">// <![CDATA[
+		document.write(
+			'<script type="text/javascript" src="' + manualTests.config.gloaderPath + '"> \
+				gloader.use("glow", { \
+					$map:  manualTests.config.mapPath, \
+					$base: manualTests.config.basePath \
+				}); \
+			<' + '/script>'
+		);
+	// ]]></script>
 	
-	<style type="text/css" media="screen">
-		/* this seems to be required in order to make the dragging look sane */
-		.sandbox {
-			overflow: hidden;
-			position: relative;
+	<script type="text/javascript">gloader.load(['glow', '@VERSION@', 'glow.widgets.Sortable'])</script>
+	
+	<style type="text/css">
+		#sortable1 li {
+			cursor: pointer;
 		}
 		
-		.sortable li {
-			cursor: move;
+		#sortable2 .handle {
+			cursor: pointer;
+			background: green;
+			height: 20px;
+		}
+		#sortable2 {
+			background: #555;
+			width: 300px;
+			overflow: hidden;
+		}
+		 #sortable3 .col {
+			background: #555;
+			width: 200px;
+			overflow: hidden;
+		}
+		#sortable3 {
+			overflow: hidden;
+		}
+		#sortable3 .col {
+			float: left;
+		}
+		#sortable2 .sortableItem, #sortable3 .sortableItem {
+			border: 10px solid #ccc;
+			background: #fff;
+			padding: 10px;
+			margin: 10px;
+			height: 50px;
+			width: 240px;
+		}
+		#sortable3 .sortableItem {
+			width: 140px;
+		}
+		#sortable3 .sortableItemLarger {
+			height: 75px;
 		}
 	</style>
-	
-	<!-- assumes gloader project folder is next to glow project folder -->
-	<script type="text/javascript" src="../../../../gloader/src/gloader.js">
-		gloader.use(
-			"glow",
-			{
-				$map:  "../../../srcloader/map.js",
-				$base: "../../../src/"
-			}
-		);
-	</script>
-	
-	<script type="text/javascript">
-		gloader.load(
-			['glow', '@VERSION@', 'glow.widgets.Sortable']
-		);
-	</script>
 </head>
 
 <body>
-	<h1>glow.widgets.Sortable examples</h1>
+	<h1>glow.widgets.Sortable</h1>
 	
-	<div class="example">	
-		<h2>Basic Sortable</h2>
-		<p>no description.</p>
-		
-		<script type="text/javascript" class="showSrc">
-		// <![CDATA[
+	<h2>Simple list sortable</h2>
+	
+	<ul>
+		<li>Drag &amp; drop to sort the elements below</li>
+		<li>Once released, the element should animate into place</li>
+		<li>'sort' should fire when elements are reordered</li>
+	</ul>
+	
+	<ol id="sortable1">
+		<li>One</li>
+		<li>Two</li>
+		<li>Three</li>
+		<li>Four</li>
+		<li>Five</li>
+		<li>Six</li>
+		<li>Seven</li>
+		<li>Eight</li>
+		<li>Nine</li>
+		<li>Ten</li>
+	</ol>
+	
+	<script type="text/javascript" class="showSrc">
 		glow.ready(function() {
-			var mySortable = new glow.widgets.Sortable('#numbers');
+			var sortable1 = new glow.widgets.Sortable('#sortable1');
+			
+			glow.events.addListener(sortable1, 'sort', function() {
+				manualTests.log('sortable1: sort');
+			});
 		});
-		// ]]>
-		</script>
-		
-		<div class="sandbox">
-			<p>Drag these list items around, change the order:</p>
-			<ol id="numbers" class="sortable">
-				<li>One</li>
-				<li>Two</li>
-				<li>Three</li>
-				<li>Four</li>
-				<li>Five</li>
-			</ol>
+	</script>
+	
+	<h2>Block sortable with handle</h2>
+	
+	<ul>
+		<li>The below elements can only be dragged by the green box</li>
+		<li>Drag &amp; drop to sort the elements below</li>
+		<li>Once released, the element should animate into place</li>
+	</ul>
+	
+	<div id="sortable2">
+		<div class="sortableItem">
+			<div class="handle"></div>
+			<p>Sortable item 1</p>
+		</div>
+		<div class="sortableItem">
+			<div class="handle"></div>
+			<p>Sortable item 2</p>
+		</div>
+		<div class="sortableItem">
+			<div class="handle"></div>
+			<p>Sortable item 3</p>
+		</div>
+		<div class="sortableItem">
+			<div class="handle"></div>
+			<p>Sortable item 4</p>
 		</div>
 	</div>
-
-	<script type="text/javascript" src="../../includes/js/showsrc.js"></script>
+	
+	<script type="text/javascript" class="showSrc">
+		glow.ready(function() {
+			var sortable2 = new glow.widgets.Sortable('#sortable2', {
+				draggableOptions: {
+					handle: 'div.handle'
+				}
+			});
+			
+			glow.events.addListener(sortable2, 'sort', function() {
+				manualTests.log('sortable2: sort');
+			});
+		});
+	</script>
+	
+	<h2>Multi column sort</h2>
+	
+	<ul>
+		<li>Drag &amp; drop to sort the elements below</li>
+		<li>Elements should be draggable between columns</li>
+		<li>Once released, the element should animate into place</li>
+	</ul>
+	
+	<div id="sortable3">
+		<div class="col">
+			<div class="sortableItem">
+				<p>Sortable item 1.1</p>
+			</div>
+			<div class="sortableItem sortableItemLarger">
+				<p>Sortable item 1.2</p>
+			</div>
+			<div class="sortableItem">
+				<p>Sortable item 1.3</p>
+			</div>
+			<div class="sortableItem">
+				<p>Sortable item 1.4</p>
+			</div>
+		</div>
+		<div class="col">
+			<div class="sortableItem">
+				<p>Sortable item 2.1</p>
+			</div>
+			<div class="sortableItem sortableItemLarger">
+				<p>Sortable item 2.2</p>
+			</div>
+			<div class="sortableItem">
+				<p>Sortable item 2.3</p>
+			</div>
+			<div class="sortableItem">
+				<p>Sortable item 2.4</p>
+			</div>
+		</div>
+		<div class="col">
+			<div class="sortableItem">
+				<p>Sortable item 3.1</p>
+			</div>
+			<div class="sortableItem sortableItemLarger">
+				<p>Sortable item 3.2</p>
+			</div>
+			<div class="sortableItem">
+				<p>Sortable item 3.3</p>
+			</div>
+			<div class="sortableItem">
+				<p>Sortable item 3.4</p>
+			</div>
+		</div>
+	</div>
+	
+	<script type="text/javascript" class="showSrc">
+		glow.ready(function() {
+			var sortable3 = new glow.widgets.Sortable('#sortable3 > *');
+			
+			glow.events.addListener(sortable3, 'sort', function() {
+				manualTests.log('sortable3: sort');
+			});
+		});
+	</script>
+	
+	<script type="text/javascript">manualTests.showSrc();</script>
+	<script type="text/javascript">manualTests.log('Logging enabled');</script>
 </body>
 </html>
