Carousel: Fixes for visibleIndex and empty carousel, plus tests

--- a/test/index.html
+++ b/test/index.html
@@ -38,6 +38,7 @@
 		'glow/forms/forms.js',
 		'glow/widgets/slider/slider.js',
 		'glow/widgets/editor/editor.js',
+                'glow/widgets/carousel/carousel.js',
 		'glow/widgets/timetable/timetable.js'
 	];
 	for (var i = 0, testFilesLen = testFiles.length; i < testFilesLen; i++) {
